--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "bpk-component-horizontal-nav": "^1.0.40",
     "bpk-component-input": "^3.2.36",
     "bpk-tokens": "^26.4.5",
-    "mathjs": "^3.16.5",
-    "react-file-reader": "git://github.com/georgegillams/react-file-reader.git#add-support-for-userland-styling"
+    "mathjs": "^3.16.5"
   },
   "scripts": {
     "predeploy": "npm run build",
@@ -34,7 +33,6 @@
     "bpk-component-grid": "^1.1.35",
     "bpk-component-text": "^1.0.27",
     "bpk-mixins": "^17.0.11",
-    "bpk-stylesheets": "^3.2.73",
     "gh-pages": "^1.1.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2"
