--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "curriculum-vitae",
-  "homepage": "https://georgegillams.github.io/",
+  "homepage": "http://georgegillams.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
