--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "curriculum-vitae",
+  "name": "george-gillams",
   "homepage": "https://georgegillams.github.io/",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +11,7 @@
     "bpk-component-banner-alert": "^1.3.5",
     "bpk-component-checkbox": "^1.3.34",
     "bpk-component-horizontal-nav": "^1.0.40",
+    "bpk-component-image": "^2.0.5",
     "bpk-component-input": "^3.2.36",
     "bpk-tokens": "^26.4.5",
     "mathjs": "^3.16.5",
