--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bpk-component-horizontal-nav": "^1.0.40",
     "bpk-component-image": "^2.0.5",
     "bpk-component-input": "^3.2.36",
-    "bpk-tokens": "^26.4.5",
+    "bpk-tokens": "^26.4.5"
   },
   "scripts": {
     "predeploy": "npm run build",
