--- a/.eslintrc
+++ b/.eslintrc
@@ -6,5 +6,13 @@
   },
   "rules": {
     "import/no-extraneous-dependencies": [0]
+  },
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
+    "ecmaFeatures": {
+       "jsx": true,
+       "experimentalObjectRestSpread": true
+    }
   }
 }
