--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "bpk-component-image": "^2.0.5",
     "bpk-component-input": "^3.2.36",
     "bpk-tokens": "^26.4.5",
+    "dompurify": "^1.0.3",
+    "react-helmet": "^5.2.0",
+    "react-render-html": "^0.6.0",
     "react-router-dom": "^4.2.2",
     "webfontloader": "^1.6.28"
   },
