--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react-helmet": "^5.2.0",
     "react-navbar": "^1.0.0",
     "react-render-html": "^0.6.0",
+    "react-responsive-carousel": "^3.1.30",
     "react-router-dom": "^4.2.2",
+    "react-slick": "^0.16.0",
+    "slick-carousel": "^1.8.1",
     "webfontloader": "^1.6.28"
   },
   "scripts": {
