--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "bpk-animate-height": "^1.0.31",
     "bpk-component-accordion": "^1.1.40",
     "bpk-component-banner-alert": "^1.3.5",
+    "bpk-component-card": "^1.0.40",
     "bpk-component-checkbox": "^1.3.34",
     "bpk-component-horizontal-nav": "^1.0.40",
     "bpk-component-image": "^2.0.5",
