--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bpk-component-horizontal-nav": "^1.0.40",
     "bpk-component-image": "^2.0.5",
     "bpk-component-input": "^3.2.36",
+    "bpk-component-spinner": "^2.2.8",
+    "bpk-component-textarea": "^1.0.40",
     "bpk-tokens": "^26.4.5",
     "dompurify": "^1.0.3",
     "react-helmet": "^5.2.0",
