--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bpk-component-card": "^1.0.40",
     "bpk-component-checkbox": "^1.3.34",
     "bpk-component-horizontal-nav": "^1.0.40",
+    "bpk-component-icon": "^3.14.19",
     "bpk-component-image": "^2.0.5",
     "bpk-component-input": "^3.2.36",
     "bpk-component-spinner": "^2.2.8",
